--- a/src/html/home.html
+++ b/src/html/home.html
@@ -42,7 +42,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">APIs</a>
+                        <a class="nav-link" href="#">APIs (will upload soon)</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -55,7 +55,10 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Frontend Code</a></li>
+                            <li><a class="dropdown-item"
+                                    href="https://github.com/NikhilRJ2017/Issue-Tracker-Application-Frontend"
+                                    target="_blank">Frontend
+                                    Code</a></li>
                         </ul>
                     </li>
                 </ul>
